samples/_failures_safe/1761320354_62bc99_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5aab1780.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_5aab1780.c:165:24: error: missing terminating " character
  165 |                 printf("EOF
      |                        ^~~~
./samples/SAFE/__tmp_5aab1780.c:165:17: error: expected expression at end of input
  165 |                 printf("EOF
      |                 ^~~~~~
./samples/SAFE/__tmp_5aab1780.c:165:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5aab1780.c:165:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5aab1780.c:165:17: error: expected declaration or statement at end of input
